--- a/js/index.css
+++ b/js/index.css
@@ -61,8 +61,7 @@ body {
   position: fixed;
   border-radius: 50%;
   border: 2px solid rgb(236, 236, 243);
-  left: 70.2rem;
-  top: 30px;
+ 
   cursor: pointer;
   transition: all 0.5s ease;
   display: flex;
@@ -76,4 +75,10 @@ body {
   background-color: white;
 }
 
+.github{
+  padding-left: 1.2rem;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  padding-right: 16px;
+}
 
